# legged_control

./: .gitignore  README.md  ros_melodic_legged_control.md  setup.sh  test.txt
legged_body_msg/msg/: Plan.msg  README.md  State.msg
legged_body_msgs/: README.md
legged_body_msgs/msg/: Control.msg
legged_body_planner/: CMakeLists.txt  README.md  package.xml  setup_deps.sh
legged_body_planner/config/: legged_body_planner.yaml  legged_body_planner_topics.yaml
legged_body_planner/launch/: README.md  icra_world.launch  legged_body_plan.launch  legged_body_plan_demo.launch  load_global_params.launch  visualization.launch
legged_body_planner/src/: cmd_vel_pub.py  legged_body_planner.cpp  legged_body_planner_node.cpp  planning_utils.cpp  target_trajectories_publisher.cpp  traj_pub_demo.py  trajectories_publisher.cpp
legged_body_planner/test/: test_legged_body_planner.cpp
legged_body_utils/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_hw/: CMakeLists.txt  package.xml
legged_examples/legged_unitree/legged_unitree_hw/config/: go1.yaml
legged_examples/legged_unitree/legged_unitree_hw/include/legged_unitree_hw/: UnitreeHW.h
legged_examples/legged_unitree/legged_unitree_hw/include/unitree_legged_sdk/: comm.h
legged_examples/legged_unitree/legged_unitree_hw/launch/: legged_unitree_hw.launch  rviz_config.rviz
legged_examples/legged_unitree/legged_unitree_hw/src/: UnitreeHW.cpp  legged_unitree_hw.cpp  state_pub.cpp
legged_gazebo/: setup_deps.sh
legged_hw/src/: LeggedHW.cpp  (+1 more)
legged_mapping/: CMakeLists.txt  README.md  package.xml
(+54 files in other folders)
