<?xml version="1.0"?>
<package format="2">
    <name>legged_unitree_hw</name>
    <version>0.0.1</version>
    <description>ROS control warped interface for Unitree Robots</description>
    <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>

    <license>BSD</license>
    <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>
    <author email="azheng@g.clemson.edu">Andrew Zheng</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>unitree_legged_msgs</depend>
    <depend>roscpp</depend>
    <depend>legged_hw</depend>
</package>